--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="col-6 col-md-4 col-lg-4 contItens contGarrafa"  style="margin-top:
         40px;" >
              
-            <a href="pag/copoTermico.html" style="text-decoration:none;">
+            <a href="pag/copotermico.html" style="text-decoration:none;">
             <span class="spanFrete"> Frete Gratis</span>
             <span id="spanOff">5% OFF</span>
             <img src="img/copoTermico.jpg" alt="Copo termico"  class="itensImg">
