--- a/pag/garrafatermica.html
+++ b/pag/garrafatermica.html
@@ -46,10 +46,10 @@
                 <h2 style="font-size: 16pt;  margin-top: 20px;">Adicionais:</h2>
                 <h3 style="font-size: 12pt;">Cor:</h2>
 
-             <div class="section_cor" style="display: inline-flex ;">
-                  <div style=" padding: 5px; padding-right: 10px; cursor: pointer;" id="optionOne" class="select">preto<div>
-                  <div  style=" padding: 5px; padding-right: 10px; cursor: pointer;"  id="optionTwo">Verde</div>
-             </div>
+                    <div class="section_cor" style="display: inline-flex ;">
+                        <div style=" padding: 5px; padding-right: 10px; cursor: pointer;" id="optionOne" class="select">preto</div>
+                        <div  style=" padding: 5px; padding-right: 10px; cursor: pointer; display: none;"  id="optionTwo">Verde</div>
+                   </div>
  
                                         <h3 style="font-size: 12pt;">Quantidade:</h2>
 
